<resources>
    <string name="app_name">SO Stock Lite</string>
    <string name="app_title">SO Stock Lite V2</string>

    <string name="clear_and_re_scan"><![CDATA[Clear Room/Zone]]></string>
    <string name="finish_export_data"><![CDATA[Finish & export data]]></string>
    <string name="scan_ok_repeat"><![CDATA[Next Room/Zone]]></string>
    <string name="clear_re_scan"><![CDATA[Clear & re-Scan RFID Tags]]></string>
    <string name="unit_rssi">dBm</string>
    <string name="read_me_text1">"SO Stock Lite application assists you to take stock of items in your inventory.\n\nThe application assumes that all your items are tagged and identified using UHF RFID tags. The items are assumed to be stored in bins or locations that are tagged and identified using Barcodes or QR codes."</string>

    <string name="read_me_text2">
        1.\t Simply go to a bin or location and scan the Barcode or QR code to identify and record the bin that you are about to take stock of.\n\n
        2.\t Confirm the bin identifier and proceed to scan all the items tagged with UHF RFID tags in the bin.\n\n
        3.\t You will see the number of items in the bin.\n\n
        4.\t Confirm, proceed to the next bin location and repeat the process.\n\n
        5.\t Finally export a record of all your stock and save a snapshot with a date and timestamp in a convenient CSV file format.</string>

    <string name="read_me_text3">Please note that you can adjust the RF Output Power in the Settings and control the read-range of your Orca UHF RFID reader. See Sensing Objects User Manual for more information on how to adjust the RF Output Power</string>

    <string name="about_us_content">"Sensing Objects powered by Footprints is a suite of innovative solutions to address requirements for traceability of products, assets and processes that are essential for business operations in areas such as within inventory management, manufacturing process management, service and maintenance management and logistic processes. \n
        \nThe portfolio of solutions is brought to you by RFIDdirect Limited and Hito IT Solutions L.L.C.
        \nRFIDdirect Limited is a specialist supplier of RFID technology within the European market and operates as a Hardware, Software, Consumables and Bureau Service provider to Industrial, Logistics and Retail customers.
        \n\nHito IT Solutions L.L.C. is an innovative software solutions provider developing and offering cutting edge technology solutions supporting tracking and traceability requirements of Industrial, Logistics and Retail customers.
        \n\nPlease visit www.sensingobjects.tech to know more.
        </string>

    <string name="license_content">"This application is supplied to Adept Space Ltd by RFIDdirect Limited. For detailed terms and conditions for this license, please contact
        \n\nFrits van Calker
        fvc@rfiddirect.eu
        \nRFIDdirect Limited
        Bromfield Commercial Park, Stephen Gray Road, Unit 1, Office 8, Mold, Flintshire, CH7 1HE. United Kingdom
        \nTel.:
        +44 (0)845 249 0068
        +44 (0)1352 752044"</string>
    <string name="contact_us_content">"Company : Adept Space Ltd
        \nEmail : support@adeptspace.com"</string>
    <string name="rfid_tag_matching_rules"><u>RFID Tag matching rules:</u></string>
    <string name="no_matching_is_required_show_all_scanned_rfid_tags">No matching is required. Show all scanned RFID Tags</string>
    <string name="non_matching_rfid_tags_handling_rules"><u>Non matching RFID Tags handling rules:</u></string>
    <string name="do_not_show_rfid_tags">Do not show RFID Tags</string>
    <string name="show_rfid_tags">Show RFID Tags</string>
    <string name="display_scanned_rfid_tags">Display scanned RFID Tags</string>
    <string name="show_rfid_tag_count_subtotals_when_first_4_of_the_last_8_bits_match">"Show RFID Tag count subtotals when "first 4 of the last 8 bits" match"</string>
    <string name="display_last_4_bits_of_scanned_rfid_tags">Display last 4 bits of scanned RFID Tags</string>
    <string name="display_last_8_bits_of_scanned_rfid_tags">Display last 8 bits of scanned RFID Tags</string>
    <string name="match_using_name_rfid_tag_map">Match using "Name - RFID Tag" map</string>
    <string name="only_4_chars_and_only_between_0_9_a_f_is_permitted">*only 4 chars and only between 0-9, A-F is permitted</string>
    <string name="allowed_digits">0123456789ABCDEF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="camera_permission_granted">Camera Permission Granted</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="storage_permission_granted">Storage Permission Granted</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="sync_required">Sync required to proceed</string>

</resources>