<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RFIDScannerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lltHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_horizontal"
                android:layout_weight="1"
                android:text="RFID Tags - 0 items" />

            <Button
                android:id="@+id/btnRSSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_rssi_24"
                android:drawableTint="@color/white"
                android:text="34" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/cardView"
            android:background="@color/divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_horizontal"
            android:elevation="-1dp"
            android:gravity="center"
            android:text="Pull Trigger to Scan, Once finished Room/Zone, select  Next Room/Zone if you need to Continue survey" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRSSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:src="@drawable/icon_rssi"
        android:visibility="gone"
        app:fabSize="mini" />

    <androidx.cardview.widget.CardView
        android:id="@+id/lltFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="-8dp"
        android:background="@drawable/card_background"
        app:behavior_peekHeight="160dp"
        app:cardBackgroundColor="?android:attr/windowBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <View
                android:layout_width="24dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:background="@drawable/more_icon" />

            <Button
                android:id="@+id/btnRepeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:text="@string/scan_ok_repeat" />

            <Button
                android:id="@+id/btnReScan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:text="@string/clear_re_scan" />

            <Button
                android:id="@+id/btnExportData"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:text="@string/finish_export_data" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>